--- a/views/characters/index_perso.html
+++ b/views/characters/index_perso.html
@@ -11,31 +11,43 @@
 <body>
 
     <div class="container">
-        <h1>les personnages de la trlogie</h1>
+        <h1>les personnages de la trilogie</h1>
 
         <h2>les principaux protagonistes de la trilogie </h2>
         <div>
 
-            <div class="itemanakin"><a href="#"><img src="anakin" alt="" ></a></div>
-            <div class="itempalpatine"><a href="#"><img src="anakin" alt="" ></a></div>
-            <div class="itemamidala"><a href="#"><img src="anakin" alt="" ></a></div>
-            <div class="itemanakin"><a href="#"><img src="anakin" alt="" ></a></div>
-            <div class="itemanakin"><a href="#"><img src="anakin" alt="" width="50px"></a></div>
-
-
-
-
-
-
-
-
+            <div class="itemanakin"><a href="#"><img
+                        src="../../images/characters/image_centpx/anna_skywalker_resultatredimensionner.webp"
+                        alt=""></a></div>
+            <div class="itempalpatine"><a href="#"><img
+                        src="../../images/characters/image_centpx/empereur_palpatine_resultatredimensionner.webp"
+                        alt=""></a>
+            </div>
+            <div class="itemamidala"><a href="#"><img
+                        src="../../images/characters/image_centpx/padme_admidala_resultatredimensionner.webp"
+                        alt=""></a></div>
+            <div class="itemobiwan"><a href="#"><img
+                        src="../../images/characters/image_centpx/hobi_wan_resultatredimensionner.jpg" alt=""></a></div>
+            <div class="itemmace"><a href="#"><img
+                        src="../../images/characters/image_centpx/mace_windu_resultatredimensionner.jpg" alt=""
+                        width="50px"></a></div>
         </div>
 
+        <h2>Les protagonistes apparu dans la menace fantome</h2>
+        <div  class="container">
+
+        <div class="itemvalorum"><img
+                src="../../images/characters/image_centpx/finis_valorum_resultatredimensionner.jpg" alt=""></div>
+        <div class="itemgunray"><img src="../../images/characters/image_centpx/nute_gunray_resultatredimensionner.webp"
+                alt=""></div>
+        <div class="itemqui"><img src="../../images/characters/image_centpx/qui-gon_jinn_resultatredimensionner.webp"
+                alt=""></div>
+        <div class="itemboss"><img src="../../images/characters/image_centpx/" alt=""></div>
+        <div></div>
+    
 
 
-
-
-
+</div>
 
     </div>
 
