--- a/views/corporations/jedi.html
+++ b/views/corporations/jedi.html
@@ -17,14 +17,14 @@
 					<div class="histoire">
 						<h1>Jedi</h1>
 						<p>Les Jedi ont fini par former une entité politique centrale appelée conseil Jedi.
-							Celui-ci constitue l'instance suprême qui dirige l'Ordre, et est lié à l'organisation politique de la République à travers l'action des Jedi dans des missions consulaires ou militaires.
+							Celui-ci constitue l'instance suprême qui dirige l'Ordre, et est lié à l'organisation politique de la <a href="../../views/corporations/republique_galactique.html"><a href="../../views/corporations/republique_galactique.html">République</a></a> à travers l'action des Jedi dans des missions consulaires ou militaires.
 							Le conseil Jedi ne peut avoir que douze membres à la fois.
-							Ses membres ont pour tâche de diriger et guider l’ordre Jedi dans la République.
-							Parmi d'autres tâches, les Jedi sont responsables de l'application de la loi et le maintien de la paix dans la République.
+							Ses membres ont pour tâche de diriger et guider l’ordre Jedi dans la <a href="../../views/corporations/republique_galactique.html"><a href="../../views/corporations/republique_galactique.html">République</a></a>.
+							Parmi d'autres tâches, les Jedi sont responsables de l'application de la loi et le maintien de la paix dans la <a href="../../views/corporations/republique_galactique.html">République</a>.
 							À l'époque de la guerre des clones, ils sont intégrés dans la hiérarchie militaire, en tant que généraux, soldats d'élite ou conseillers.
 							À cette fin, ils utilisent non seulement la Force mais aussi leur sabre laser.
-							En tant que gardien de la République, les Jedi ont juré fidélité aux principes sur lesquels reposent la République et non au régime lui-même.
-							C'est à ce titre que Mace Windu tente d'arrêter par précaution le chancelier Palpatine, pourtant chef démocratiquement élu de la République,
+							En tant que gardien de la <a href="../../views/corporations/republique_galactique.html">République</a>, les Jedi ont juré fidélité aux principes sur lesquels reposent la <a href="../../views/corporations/republique_galactique.html">République</a> et non au régime lui-même.
+							C'est à ce titre que Mace Windu tente d'arrêter par précaution le chancelier <a href="">Palpatine</a>, pourtant chef démocratiquement élu de la <a href="../../views/corporations/republique_galactique.html">République</a>,
 							et tente même de l'exécuter sans procès, faute de pouvoir compter sur l'impartialité d'institutions qu'il s'est accaparées.
 						</p>
 					</div>
@@ -33,7 +33,7 @@
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td>Menace fantôme / Attaque des clones / Revanche des siths</td>
+								<td><a href="../movies/movie1.html">Menace fantôme</a>, <a href="../movies/movie2.html">Attaque des clones</a>, <a href="../movies/movie3.html">Revanche des siths</a></td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
