--- a/views/corporations/republique_galactique.html
+++ b/views/corporations/republique_galactique.html
@@ -27,7 +27,7 @@
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td>La Menace fantôme, L'Attaque des clones, The Clone Wars, La Revanche des Sith</td>
+								<td><a href="../movies/movie1.html">Menace fantôme</a>, <a href="../movies/movie2.html">Attaque des clones</a>, <a href="../movies/movie3.html">Revanche des siths</a></td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
