--- a/views/corporations/siths.html
+++ b/views/corporations/siths.html
@@ -33,7 +33,7 @@
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td>menace fantôme / attaque des clones / revanche des siths</td>
+								<td><a href="../movies/movie1.html">Menace fantôme</a>, <a href="../movies/movie2.html">Attaque des clones</a>, <a href="../movies/movie3.html">Revanche des siths</a></td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
