--- a/views/corporations/empire_galactique.html
+++ b/views/corporations/empire_galactique.html
@@ -19,8 +19,8 @@
 						<p>
 							L'Empire galactique (en version originale anglaise : Galactic Empire), simplement désigné comme l'Empire, est un régime politique fictif apparaissant dans la saga cinématographique Star
 							Wars et qui domine la galaxie pendant 23 ans, commençant 19 ans avant la bataille de Yavin (considérée comme le principal point de repère temporel de l'univers) et se terminant 4 ans
-							après cette dernière lors de la bataille d'Endor. Son règne débute dès la chute de la République galactique. Son seul dirigeant est l'empereur Palpatine, également connu sous le nom du
-							seigneur Sith Dark Sidious, ayant conduit à sa création en tant que Chancelier suprême de la République. L'Empire, dont la domination est vivement contestée, est suivi 30 ans après sa
+							après cette dernière lors de la bataille d'Endor. Son règne débute dès la chute de la <a href="../../views/corporations/republique_galactique.html">République</a> galactique. Son seul dirigeant est l'empereur <a href="../../views/characters/palpatine.html">Palpatine, également connu sous le nom du
+							seigneur Sith Dark Sidious, ayant conduit à sa création en tant que Chancelier suprême de la <a href="../../views/corporations/republique_galactique.html">République</a>. L'Empire, dont la domination est vivement contestée, est suivi 30 ans après sa
 							destruction par une organisation partageant les mêmes points de vue et les mêmes intérêts et dénommée Premier Ordre.
 						</p>
 					</div>
