--- a/views/corporations/cartel_hutt.html
+++ b/views/corporations/cartel_hutt.html
@@ -30,7 +30,7 @@
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td><a href="../movies/movie1.html">Menace fantôme</a>, <a href="../movies/movie2.html">Attaque des clones</a>, <a href="../movies/movie3.html">Revanche des siths</a></td>
+								<td><a href="../movies/movie1.html">La Menace fantôme</a>, <a href="../movies/movie2.html">L'Attaque des clones</a>, <a href="../movies/movie3.html">La Revanche des Sith</a></td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
