--- a/views/corporations/empire_galactique.html
+++ b/views/corporations/empire_galactique.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../../css/styles.css" />
-		<title></title>
+		<title>L'Empire galactique</title>
 	</head>
 	<body>
 		<header>
@@ -15,7 +15,7 @@
 			<div class="container">
 				<div class="presentation">
 					<div class="histoire">
-						<h1>Empire galactique</h1>
+						<h1>L'Empire galactique</h1>
 						<p>
 							L'Empire galactique (en version originale anglaise : Galactic Empire), simplement désigné comme l'Empire, est un régime politique fictif apparaissant dans la saga cinématographique Star
 							Wars et qui domine la galaxie pendant 23 ans, commençant 19 ans avant la bataille de Yavin (considérée comme le principal point de repère temporel de l'univers) et se terminant 4 ans
@@ -29,7 +29,7 @@
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td>La Revanche des Sith, Rogue One, Un nouvel espoir, L'Empire contre-attaque, Le Retour du Jedi</td>
+								<td>La Revanche des Sith</td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
