--- a/views/corporations/jedi.html
+++ b/views/corporations/jedi.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../../css/styles.css" />
-		<title>Jedi</title>
+		<title>L'Ordre Jedi</title>
 	</head>
 	<body>
 		<header>
@@ -15,8 +15,9 @@
 			<div class="container">
 				<div class="presentation">
 					<div class="histoire">
-						<h1>Jedi</h1>
-						<p>Les Jedi ont fini par former une entité politique centrale appelée conseil Jedi.
+						<h1>L'Ordre Jedi</h1>
+						<p>
+							Les Jedi ont fini par former une entité politique centrale appelée conseil Jedi.
 							Celui-ci constitue l'instance suprême qui dirige l'Ordre, et est lié à l'organisation politique de la République à travers l'action des Jedi dans des missions consulaires ou militaires.
 							Le conseil Jedi ne peut avoir que douze membres à la fois.
 							Ses membres ont pour tâche de diriger et guider l’ordre Jedi dans la République.
@@ -33,7 +34,7 @@
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td>Menace fantôme / Attaque des clones / Revanche des siths</td>
+								<td>La Menace fantôme, L'Attaque des clones et La Revanche des Sith</td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
