--- a/views/corporations/sith.html
+++ b/views/corporations/sith.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../../css/styles.css" />
-		<title>La République galactique</title>
+		<title>Les Sith</title>
 	</head>
 	<body>
 		<header>
@@ -15,11 +15,8 @@
 			<div class="container">
 				<div class="presentation">
 					<div class="histoire">
-						<h1>La République galactique</h1>
-						<p>
-							La République galactique (Galactic Republic en version originale), ou simplement désignée comme la République est un régime politique fictif apparaissant dans le monde fantastique de
-							Star Wars prédominant la galaxie durant un millénaire environ, s'achevant 19 ans avant la bataille de Yavin (considérée comme le principal point de repère temporel de l'univers), date à
-							laquelle son Chancelier Suprême proclame l'Empire galactique. Après la disparition de ce dernier, un nouveau régime républicain voit le jour, la Nouvelle République.
+						<h1>Les Sith</h1>
+						<p>L'Ordre Sith, dont les membres étaient communément appelés les Sith, était une ancienne communauté d'utilisateurs du côté obscur de la Force guidés par leur haine et leur colère et dont le seul but était d'asseoir leur suprématie sur la galaxie. Fondé par un Jedi renégat plus de 5000 ans avant la bataille de Yavin, l'Ordre Sith s'étendit alors rapidement dans la galaxie et un conflit perpétuel s'installa alors entre les Sith et l'Ordre Jedi dont le but était de maintenir la paix et la justice au sein de l'Ancienne République.
 						</p>
 					</div>
 					<div class="presentoir">
@@ -27,11 +24,11 @@
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td>La Menace fantôme, L'Attaque des clones, et La Revanche des Sith</td>
+								<td>La Menace fantôme, l'Attaque des clones et La Revanche des Sith</td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
-								<td>Lumineux</td>
+								<td>Obscur</td>
 							</tr>
 						</table>
 					</div>
