--- a/views/characters/palpatine.html
+++ b/views/characters/palpatine.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="presentation">
                 <div class="histoire">
-                    <h1>Génerale palpatine</h1>
+                    <h1>Palpatine</h1>
                     <p>Sans que personne n'en soit au courant, Palpatine préparait durant son règne d'Empereur un plan
                         secret basé sur la planète Exegol, afin de pouvoir ressusciter dans le corps d'un clone de
                         lui-même</p>
@@ -27,22 +27,18 @@
                     <table>
                         <tr>
                             <th>Apparaît dans : </th>
-                            <td><a>La Menace fantôme</a> , <a>L'Attaque des clones</a> et <a>La Vengeance des Sith</a>
+                            <td><a href="../movies/movie1.html">La Menace fantôme</a>, <a href="../movies/movie2.html">L'Attaque des clones</a> et <a href="../movies/movie3.html">La Vengeance des Sith</a>
                             </td>
                         </tr>
                         <th>Première apparition :</th>
                         <td><a>L'Empire contre-attaque </a></td>
                         <tr>
                             <th>Affiliations :</th>
-                            <td>Sith République galactique</td>
-                            <td>CSI</td>
-                            <td>apire galactique
-                            <td>Praier Ordre</td>
-                            <td>Dernier Ordre</td>
+                            <td><a href="../corporations/sith.html">Sith</a>, <a href="../corporations/republique_galactique.html">République galactique</a>, <a href="../corporations/conseil_separatiste.html">Confédération des Systèmes Indépendants (CSI)/conseil séparatiste</a>, <a href="../corporations/empire_galactique.html">Empire galactique</a>, Premier Ordre, Dernier Ordre</td>
                         </tr>
                         <tr>
                             <th>Race :</th>
-                            <td>Être humain, puis seigneur shit</td>
+                            <td>Être humain, puis seigneur <a href="../corporations/sith.html">Sith</a></td>
                         </tr>
                         <tr>
                             <th>Genre :</th>
@@ -50,18 +46,15 @@
                         </tr>
                         <tr>
                             <th>Planète d'origine :</th>
-                            <td>Naboo</td>
+                            <td><a href="../planets/naboo.html">Naboo</a></td>
                         </tr>
                         <tr>
                             <th>Métier :</th>
-                            <td>Sith</td>
-                            <td>Sénateur</td>
-                            <td> Chancelier</td>
-                            <td>apereur</td>
+                            <td>Sith, Sénateur, Chancelier, Empereur</td>
                         </tr>
                         <tr>
                             <th>Côté de la force :</th>
-                            <td>Côté obscur</td>
+                            <td>obscur</td>
                         </tr>
                     </table>
                 </div>
@@ -70,50 +63,19 @@
                 <hr>
                 <h2>Rôle dans l'histoire</h2>
                 <img src="" alt="">
-                <p>Sheev Palpatine, alias Dark Sidious, ou Darth Sidious dans la version originale et québécoise, est un
-                    personnage de fiction, seigneur noir des Sith, homme politique et antagonist
-                    principal de la saga Star Wars créée par George Lucas. D'abord sénateur de Naboo, Palpatine réussit
-                    à se faire élire
-                    Chancelier suprême de la galaxie, avant de fomenter un coup d'état qui le voit devenir apereur de
-                    l'apire
-                    galactique pendant vingt-cinq ans.</p>
-                <p>La prélogie, composée de <a>La Menace fantôme</a> (1999), <a>L'Attaque des clones</a> (2002) et <a>La
-                        Revanche des Sith</a> (2005)Sheev Palpatine, né sur Naboo vers 84 avant la bataille de Yavin1,
-                    s'engage
-                    dans une carrière politique et en gravit les échelons jusqu'à devenir le représentant de sa planète
-                    natale au
-                    Sénat galactique de la République.
-                    Palpatine a obtenu le nom de Dark Sidious lorsqu'il est devenu l'apprenti du seigneur Sith
-                    légendaire Dark
-                    Plagueis qui était, selon les dires du futur chancelier à Anakin Skywalker, parvenu à influencer les
-                    midi-chloriens pour créer la vie et protéger de la mort. Sidious a tué son maître dans son sommeil
-                    après avoir
-                    reçu tous les enseignaents de ce dernier sur le côté obscur de la Force</p>
-                <p>Utilisant sa maîtrise du côté obscur, ses talents d'homme politique et sa connaissance des rouages de
-                    la
-                    République,
-                    il devient sénateur de la planète Naboo au Sénat galactique en 52 av. BY, puis Chancelier suprême de
-                    la
-                    République
-                    galactique en 32 av. BY (épisode I). Réussissant à dissimuler son identité de seigneur noir des
-                    Sith, Palpatine
-                    profite de la crise de sécession
-                    qu'il a secrètaent incitée pour se faire voter les pleins pouvoirs par le Sénat en 22 av. BY.
-                    Manipulant à la
-                    fois les Séparatistes et la République,
-                    il veille à faire durer la guerre des clones, lui permettant ainsi d'accroître sa mainmise sur la
-                    Galaxie.. </p>
-                <p>En 19 av. BY, après avoir mis en œuvre la grande purge Jedi, il s'autoproclame apereur devant le
-                    Sénat, et
-                    transforme la République en un apire.
-                    Il fait sombrer le Jedi Anakin Skywalker dans le côté obscur de la Force et en fait Dark Vador, son
-                    nouvel élève
-                    et bras droit. Le règne de Palpatine s'achève dans l'épisode VI,
-                    à la fin duquel il est présumé mort tué par Dark Vador en l'an 4 ap. BY lors de la bataille finale
-                    contre la
-                    seconde étoile de la Mort. Il opère son retour dans l’épisode IX, où il est définitivaent éliminé
-                    par Rey, sa
-                    petite-fille.</p>
+                <p>
+                    Sheev Palpatine, alias Dark Sidious, ou Darth Sidious dans la version originale et québécoise, est un
+                    personnage de fiction, seigneur noir des <a href="../corporations/sith.html">Sith</a>, homme politique et antagoniste principal de la saga Star Wars créée par George Lucas. D'abord sénateur de <a href="../planets/naboo.html">Naboo</a>, Palpatine réussit à se faire élire Chancelier suprême de la <a href="../corporations/republique_galactique.html">galaxie</a>, avant de fomenter un coup d'état qui le voit devenir empereur de <a href="../corporations/empire_galactique.html">l'Empire galactique</a> pendant vingt-cinq ans.
+                </p>
+                <p>
+                    La prélogie, composée de <a href="../movies/movie1.html">La Menace fantôme</a> (1999), <a href="../movies/movie2.html">L'Attaque des clones</a> (2002) et <a href="../movies/movie3.html">La Revanche des Sith</a> (2005)Sheev Palpatine, né sur Naboo vers 84 avant la bataille de Yavin, s'engage dans une carrière politique et en gravit les échelons jusqu'à devenir le représentant de sa planète natale au <a href="../corporations/senat_galactique.html">Sénat galactique de la République</a>. Palpatine a obtenu le nom de Dark Sidious lorsqu'il est devenu l'apprenti du seigneur Sith légendaire Dark Plagueis qui était, selon les dires du futur chancelier à <a href="../characters/anakin_skywalker.html">Anakin Skywalker</a>, parvenu à influencer les midi-chloriens pour créer la vie et protéger de la mort. Sidious a tué son maître dans son sommeil après avoir reçu tous les enseignements de ce dernier sur le côté obscur de la Force.
+                </p>
+                <p>
+                    Utilisant sa maîtrise du côté obscur, ses talents d'homme politique et sa connaissance des rouages de la République, il devient sénateur de la planète Naboo au Sénat galactique en 52 av. BY, puis Chancelier suprême de la République galactique en 32 av. BY (épisode I). Réussissant à dissimuler son identité de seigneur noir des Sith, Palpatine profite de la crise de sécession qu'il a secrètement incitée pour se faire voter les pleins pouvoirs par le Sénat en 22 av. BY. Manipulant à la fois les <a href="../corporations/conseil_separatiste.html">Séparatistes</a> et la République, il veille à faire durer la guerre des clones, lui permettant ainsi d'accroître sa mainmise sur la Galaxie. 
+                </p>
+                <p>
+                    En 19 av. BY, après avoir mis en œuvre la grande purge <a href="../corporations/jedi.html">Jedi</a>, il s'autoproclame empereur devant le Sénat, et transforme la République en un empire. Il fait sombrer le Jedi Anakin Skywalker dans le côté obscur de la Force et en fait Dark Vador, son nouvel élève et bras droit. Le règne de Palpatine s'achève dans l'épisode VI, à la fin duquel il est présumé mort tué par Dark Vador en l'an 4 ap. BY lors de la bataille finale contre la seconde étoile de la Mort. Il opère son retour dans l’épisode IX, où il est définitivaent éliminé par Rey, sa petite-fille.
+                </p>
             </div>
         </div>
     </main>
