--- a/views/characters/nute_gunray.html
+++ b/views/characters/nute_gunray.html
@@ -16,14 +16,14 @@
 				<div class="presentation">
 					<div class="histoire">
                         <h1>Nute Gunray</h1>
-                        <p>Nute Gunray est un personnage de Star Wars créé pour la deuxième trilogie de la saga. Originaire de Cato Neimodia, ce neimodien est vice-roi de la Fédération du Commerce dans les films dans lesquels il apparaît.</p>
+                        <p>Nute Gunray est un personnage de Star Wars créé pour la <a href="../index.html">deuxième trilogie</a> de la saga. Originaire de Cato Neimodia, ce neimodien est vice-roi de la <a href="../corporations/federation_du_commerce.html">Fédération du Commerce</a> dans les films dans lesquels il apparaît.</p>
                     </div>
                     <div class="presentoir">
                         <img src="" alt="">
                         <table>
 							<tr>
                                 <th>Apparaît dans : </th> 
-                                <td><a>La Menace fantôme</a> , <a>L'Attaque des clones</a> et <a>La Vengeance des Sith</a></td>
+                                <td><a href="../movies/movie1.html">La Menace fantôme</a> , <a href="../movies/movie2.html">L'Attaque des clones</a> et <a href="../movies/movie3.html">La Vengeance des Sith</a></td>
                             </tr>
                             <tr>
                                 <th>Première apparition :</th>
@@ -31,7 +31,7 @@
                             </tr>
                             <tr>
                                 <th>Affiliations :</th>
-                                <td>Fédération du commerce CSI</td>
+                                <td><a href="../corporations/federation_du_commerce.html">Fédération du commerce/CSI</a></td>
                             </tr>
                             <tr>
                                 <th>Race :</th>
@@ -60,12 +60,12 @@
                     <hr>
                     <h2>Rôle dans l'histoire</h2>
                     <img src="" alt="">
-					<p>Dans La Menace fantôme, il s'agit de l'antagoniste le plus présent. Il lance le blocus de Naboo, guidé dans l'ombre par le Sith Dark Sidious et taporairaent secondé de l'apprenti du Sith, Dark Maul. Il rejoint ensuite le Conseil séparatiste du comte Dooku, le second apprenti de Dark Sidious, et assiste au commencaent de la guerre des clones à Géonosis dans L'Attaque des clones. Il est enfin tué dans La Revanche des Sith à la fin de cette guerre à Mustafar, lorsque le nouvel apprenti de Dark Sidious, Dark Vador, est envoyé par son maître massacrer les dirigeants séparatistes.</p>  
-					<p>Rôle dans le blocus de Naboo : <br>
-                        Vice-roi de la Fédération du Commerce, Nute Gunray est contacté par le mystérieux Sith Dark Sidious (qui n'est autre que le sénateur Palpatine de Naboo) en 32 av. BY. Le Sith manipule alors Gunray pour l'amener à superviser le blocus de Naboo illégalaent. Le neimodien envoie ensuite son armée envahir Naboo. Nute Gunray décide d'orchestrer le blocus de Naboo lorsqu'il apprend que le Sénat décide de taxer les zones éloignées où la Fédération du Commerce s'enrichit. Lorsque des Jedi sont envoyés par la République en ambassadeurs, Dark Sidious convainc Gunray de tenter de les tuer, mais il échoue.</p>   
+					<p>Dans <a href="../movies/movie1.html">La Menace fantôme</a>, il s'agit de l'antagoniste le plus présent. Il lance le blocus de <a href="../planets/naboo.html">Naboo</a>, guidé dans l'ombre par le <a href="../corporations/sith.html">Sith</a> <a href="../characters/palpatine.html">Dark Sidious</a> et temporairement secondé de l'apprenti du Sith, <a href="../characters/dark_maul.html">Dark Maul</a>. Il rejoint ensuite le <a href="../corporations/conseil_separatiste.html">Conseil séparatiste</a> du <a href="../characters/compte_dooku.html">comte Dooku</a>, le second apprenti de Dark Sidious, et assiste au commencement de la guerre des clones à Géonosis dans <a href="../movies/movie2.html">L'Attaque des clones</a>. Il est enfin tué dans <a href="../movies/movie3.html">La Revanche des Sith</a> à la fin de cette guerre à Mustafar, lorsque le nouvel apprenti de Dark Sidious, <a href="../characters/anakin_skywalker.html">Dark Vador</a>, est envoyé par son maître massacrer les dirigeants <a href="../corporations/conseil_separatiste.html">séparatistes</a>.</p>  
+					<p>Rôle dans le blocus de <a href="../planets/naboo.html">Naboo</a> : <br>
+                        Vice-roi de la <a href="../corporations/federation_du_commerce.html">Fédération du Commerce</a>, Nute Gunray est contacté par le mystérieux <a href="../corporations/sith.html">Sith</a> Dark Sidious (qui n'est autre que le sénateur <a href="../characters/palpatine.html">Palpatine</a> de Naboo) en 32 av. BY. Le Sith manipule alors Gunray pour l'amener à superviser le blocus de Naboo illégalaent. Le neimodien envoie ensuite son armée envahir Naboo. Nute Gunray décide d'orchestrer le blocus de Naboo lorsqu'il apprend que le <a href="../corporations/senat_galactique.html">Sénat</a> décide de taxer les zones éloignées où la <a href="../corporations/federation_du_commerce.html">Fédération du Commerce</a> s'enrichit. Lorsque des <a href="../corporations/jedi.html">Jedi</a> sont envoyés par la <a href="../corporations/republique_galactique.html">République</a> en ambassadeurs, Dark Sidious convainc Gunray de tenter de les tuer, mais il échoue.</p>   
 					<p>Rôle dans la guerre des clones : <br>
-                        Gunray se rapproche de la CSI et devient mabre du Conseil séparatiste. Il fournit l'organisation en droïdes de combat et donne un grand avantage à son camp au début de la guerre des clones. <br>
-                        Alors que le Conseil séparatiste est réuni à Mustafar, le nouveau Sith Dark Vador arrive. Il tue alors tous les mabres. Nute Gunray est la dernière victime du massacre. Alors qu'il s'attend depuis le début de son partenariat avec Dark Sidious à un titre respectable dans l'apire galactique que ce dernier s'apprête à fonder, Dark Sidious le trahit ainsi en le faisant tuer.</p> 
+                        Gunray se rapproche de la CSI (Confédération des Systèmes Indépendants) et devient membre du <a href="../corporations/conseil_separatiste.html">Conseil séparatiste</a>. Il fournit l'organisation en droïdes de combat et donne un grand avantage à son camp au début de la guerre des clones. <br>
+                        Alors que le Conseil séparatiste est réuni à <a href="../planets/mustafar.html">Mustafar</a>, le nouveau Sith Dark Vador arrive. Il tue alors tous les membres. Nute Gunray est la dernière victime du massacre. Alors qu'il s'attend depuis le début de son partenariat avec Dark Sidious à un titre respectable dans l'Empire galactique que ce dernier s'apprête à fonder, Dark Sidious le trahit ainsi en le faisant tuer.</p> 
                 </div>
 			</div>
 		</main>
