updated links Qui-Gong and added corporation haut_conseil_gungan

--- a/views/characters/boss_nass.html
+++ b/views/characters/boss_nass.html
@@ -16,14 +16,14 @@
 				<div class="presentation">
 					<div class="histoire">
                         <h1>Boss Nass</h1>
-                        <p>Rungor Nass, également connu sous le nom de Boss Nass, était le chef de la lignée Otolla Gungan ainsi que du Haut Conseil et de Gungan City durant l’invasion de Naboo par les forces de la Fédération du Commerce. C’est grâce à sa grande force de caractère qu’il réussit à prendre la tête de son peuple.</p> 
+                        <p>Rungor Nass, également connu sous le nom de Boss Nass, était le chef de la lignée Otolla Gungan ainsi que du Haut Conseil et de Gungan City durant l’invasion de <a href="../planets/naboo.html">Naboo</a> par les forces de la <a href="../corporations/federation_du_commerce.html">Fédération du Commerce</a>. C’est grâce à sa grande force de caractère qu’il réussit à prendre la tête de son peuple.</p> 
                     </div>
                     <div class="presentoir">
                         <img src="" alt="">
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th> 
-                                <td><a>La Menace fantôme</a></td>
+                                <td><a href="../movies/movie1.html">La Menace fantôme</a></td>
                             </tr>
                             <tr>
                                 <th>Première apparition :</th>
@@ -31,7 +31,7 @@
                             </tr>
                             <tr>
                                 <th>Affiliations :</th>
-                                <td>Haut Conseil Gungan, République galactique</td>
+                                <td><a href="../corporations/haut_conseil_gungan.html">Haut Conseil Gungan</a>, <a href="../corporations/republique_galactique.html">République galactique</a></td>
                             </tr>
                             <tr>
                                 <th>Race :</th>
