updated links Boss Nass bail organa and added planet alderaan

--- a/views/characters/obi-wan_kenobi.html
+++ b/views/characters/obi-wan_kenobi.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Obi wan kenobi</title>
+    <title>Obi-wan kenobi</title>
     <link rel='stylesheet' type='text/css' media='screen' href='../../css/styles.css'>
 </head>
 
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="presentation">
                 <div class="histoire">
-                    <h1>Obi wan</h1>
+                    <h1>Obi-wan Kenobi</h1>
                     <p>Obi-Wan Kenobi est un homme humain d'une hauteur de 1,79 m puis de 1,82 m. Il porte généralement
                         une toge de Jedi. Il est réputé notamment pour sa maîtrise du sabre laser exceptionnelle et
                         surtout son talent en négociation. Il n'apprécie pas le pilotage mais témoigne tout de même d'un
