--- a/views/characters/bail_organa.html
+++ b/views/characters/bail_organa.html
@@ -17,10 +17,7 @@
 					<div class="histoire">
 						<h1>Bail Organa</h1>
 						<p>
-							Bail Organa est un personnage de Star Wars. Sénateur à Coruscant de la planète Alderaan, il apparaît dans Star Wars, épisode II : L'Attaque des clones, Star Wars, épisode III : La
-							Revanche des Sith, Rogue One: A Star Wars Story et Obi-Wan Kenobi. C'est un pionnier de la rébellion qui a été mabre de la délégation des 2000. Après l'Ordre 66, il vient en aide aux
-							Jedi Yoda et Obi-Wan Kenobi et assiste avec eux à la naissance des jumeaux Luke Skywalker et celle qu'il va adopter avec sa fame : Leia Organa, qui le raplacera plus tard au Sénat
-							impérial.
+							Bail Organa est un personnage de Star Wars. Sénateur à <a href="../planets/coruscant.html">Coruscant</a> de la planète Alderaan, il apparaît dans Star Wars, <a href="../movies/movie2.html">épisode II : L'Attaque des clones</a>, Star Wars, <a href="../movies/movie3.html">épisode III : La Revanche des Sith</a>, Rogue One: A Star Wars Story et <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a>. C'est un pionnier de la rébellion qui a été membre de la délégation des 2000. Après l'Ordre 66 (un protocole qui amena les soldats clones à considérer les <a href="../corporations/jedi.html">Jedi</a> comme des traîtres et les tuer à vue), il vient en aide aux Jedi <a href="../characters/yoda.html">Yoda</a> et <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a> et assiste avec eux à la naissance des <a href="../characters/anakin_skywalker.html"></a>jumeaux Luke Skywalker</a> et celle qu'il va adopter avec sa femme : <a href="../characters/anakin_skywalker.html">Leia Organa</a>, qui le remplacera plus tard au Sénat impérial.
 						</p>
 					</div>
 					<div class="presentoir">
@@ -28,19 +25,19 @@
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td><a>L'Attaque des clones</a>, <a>La Revanche des Sith</a> <a>Rogue One</a></td>
+								<td><a href="../movies/movie2.html">L'Attaque des clones</a> et <a href="../movies/movie3.html">La Revanche des Sith</a></td>
 							</tr>
 							<tr>
 								<th>Première apparition :</th>
-								<td><a>L'Attaque des clones (2002)</a></td>
+								<td><a href="../movies/movie2">L'Attaque des clones (2002)</a></td>
 							</tr>
 							<tr>
 								<th>Affiliations :</th>
-								<td><a>République galactique</a>, <a>Alliance rebelle</a></td>
+								<td><a href="../corporations/republique_galactique.html">République galactique</a>, Alliance rebelle</td>
 							</tr>
 							<tr>
 								<th>Race :</th>
-								<td>Humain</td>
+								<td>Être Humain</td>
 							</tr>
 							<tr>
 								<th>Genre :</th>
@@ -48,15 +45,15 @@
 							</tr>
 							<tr>
 								<th>Planète d'origine :</th>
-								<td>Alderaan</td>
+								<td><a href="../planets/alderaan.html">Alderaan</a></td>
 							</tr>
 							<tr>
 								<th>Métier :</th>
-								<td>Sénateur d'Alderaan Fondateur et leadeur de l'Alliance Rebelle</td>
+								<td>Sénateur d'Alderaan, fondateur et leader de l'Alliance Rebelle (apparaissant dans la première trilogie) </td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
-								<td>Côté clignotant</td>
+								<td>Lumineux</td>
 							</tr>
 						</table>
 					</div>
@@ -65,9 +62,9 @@
 					<hr />
 					<h2>Rôle dans l'histoire</h2>
 					<img src="" alt="" />
-					<p>Bail Organa naquit sur Alderaan. Après un conflit qui fut réglé à l'aide du Maître Jedi Jorus C'baoth, il fut proclamé Vice-Roi de la planète. Il prit également les fonctions de sénateur en remplaçant Bail Antilles à ce poste1.</p>
-					<p>Ardent défenseur de la démocratie et de la République, il fit partie du Comité Loyaliste lors de la Crise Séparatiste et soutint le Chancelier Suprême Palpatine. Il soutint également la motion du sénateur Binks afin d'attribuer les pleins pouvoirs au Chancelier à la veille de la guerre des clones. Néanmoins, il se rendit compte durant le conflit et grâce à l'aide de l'ex-chancelier Finis Valorum, que Palpatine était beaucoup moins bienveillant qu'il voulait bien le montrer et que ses méthodes laissaient pour le moins à désirer. Sa conviction fut renforcée lorsque Palpatine le "menaça gentiment" (selon Organa lui-même) et encore plus lorsque Valorum mourut lors de l'explosion d'un cargo permettant au Chancelier à la fois d'éliminer cette menace et de faire passer une loi pour renforcer la sécurité.</p>
-					<p>Lors du conflit, Organa se rapprocha des Jedi et de certains sénateurs comme Fang Zar, Padmé Amidala et surtout Mon Mothma2,3, la sénatrice de Chandrila, future dirigeante de la rébellion. Bail Organa accueillit Anakin Skywalker et Obi-Wan Kenobi, les deux héros Jedi, après la bataille de Coruscant. Il se trouvait toujours sur Coruscant lorsque l'Ordre 66 fut donné et il se rendit au temple Jedi alors que les clones de la 501e légion le prenaient d'assaut sous le commandement de Dark Vador et de Appo. Il assista en direct au meurtre de Zett Jukassa et parvint à s'enfuir in extremis. Seul son statut de sénateur lui sauva la vie à ce moment. Il décida alors de partir à la recherche d'éventuels survivants Jedi pour leur porter secours et parvint à réunir Obi-Wan Kenobi et Yoda à bord du Tantive IV. Il fut alors convoqué au Sénat pour une session extraordinaire où Palpatine annonça la fin de la République et le début de l'Empire ainsi que l'extermination des « traîtres » Jedi.</p>
+					<p>Bail Organa naquit sur <a href="../planets/alderaan.html">Alderaan</a>. Après un conflit qui fut réglé à l'aide du Maître <a href="../corporations/jedi.html">Jedi</a> Jorus C'baoth, il fut proclamé Vice-Roi de la planète. Il prit également les fonctions de sénateur en remplaçant Bail Antilles à ce poste.</p>
+					<p>Ardent défenseur de la démocratie et de la <a href="../corporations/republique_galactique.html">République</a>, il fit partie du Comité Loyaliste lors de la <a href="../corporations/conseil_separatiste.html">Crise Séparatiste</a> et soutint le Chancelier Suprême <a href="../characters/palpatine.html">Palpatine</a>. Il soutint également la motion du sénateur <a href="../characters/jar_jar_bink.html">Binks</a> afin d'attribuer les pleins pouvoirs au Chancelier à la veille de la guerre des clones. Néanmoins, il se rendit compte durant le conflit et grâce à l'aide de l'ex-chancelier <a href="../characters/finis_valorum.html">Finis Valorum</a>, que Palpatine était beaucoup moins bienveillant qu'il voulait bien le montrer et que ses méthodes laissaient pour le moins à désirer. Sa conviction fut renforcée lorsque Palpatine le "menaça gentiment" (selon Organa lui-même) et encore plus lorsque Valorum mourut lors de l'explosion d'un cargo permettant au Chancelier à la fois d'éliminer cette menace et de faire passer une loi pour renforcer la sécurité.</p>
+					<p>Lors du conflit, Organa se rapprocha des <a href="../corporations/jedi.html">Jedi</a> et de certains sénateurs comme Fang Zar, <a href="../characters/padme_amidala.html">Padmé Amidala</a> et surtout Mon Mothma, la sénatrice de Chandrila, future dirigeante de la rébellion. Bail Organa accueillit <a href="../characters/anakin_skywalker.html">Anakin Skywalker</a> et <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a>, les deux héros Jedi, après la bataille de <a href="../planets/coruscant.html">Coruscant</a>. Il se trouvait toujours sur Coruscant lorsque l'Ordre 66 (un protocole qui amena les soldats clones à considérer les Jedi comme des traîtres et les tuer à vue) fut donné et il se rendit au temple Jedi alors que les clones de la 501e légion le prenaient d'assaut sous le commandement de <a href="../characters/anakin_skywalker.html">Dark Vador</a> et de Appo. Il assista en direct au meurtre de Zett Jukassa et parvint à s'enfuir in extremis. Seul son statut de sénateur lui sauva la vie à ce moment. Il décida alors de partir à la recherche d'éventuels survivants Jedi pour leur porter secours et parvint à réunir <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a> et <a href="../characters/yoda.html">Yoda</a> à bord du Tantive IV. Il fut alors convoqué au <a href="../corporations/senat_galactique.html">Sénat</a> pour une session extraordinaire où <a href="../characters/palpatine.html">Palpatine</a> annonça la fin de <a href="../corporations/republique_galactique.html">la République</a> et le début de <a href="../corporations/empire_galactique.html">l'Empire</a> ainsi que l'extermination des « traîtres » Jedi.</p>
 				</div>
 			</div>
 		</main>
