--- a/views/characters/index_perso.html
+++ b/views/characters/index_perso.html
@@ -8,14 +8,14 @@
     <title>Index personnages </title>
 </head>
 
-<body>
+<body class="">
 
-    <div class="container">
+    <div class="containertrio">
         <h1>les personnages de la trilogie</h1>
 
-        <h2>les principaux protagonistes de la trilogie </h2>
-        <div>
+        <div class="item1">
 
+            <h2>personnages récurent de la trilogie</h2>
             <div class="itemanakin"><a href="#"><img
                         src="../../images/characters/image_centpx/anna_skywalker_resultatredimensionner.webp"
                         alt=""></a></div>
@@ -33,21 +33,145 @@
                         width="50px"></a></div>
         </div>
 
-        <h2>Les protagonistes apparu dans la menace fantome</h2>
-        <div  class="container">
-
-        <div class="itemvalorum"><img
-                src="../../images/characters/image_centpx/finis_valorum_resultatredimensionner.jpg" alt=""></div>
-        <div class="itemgunray"><img src="../../images/characters/image_centpx/nute_gunray_resultatredimensionner.webp"
-                alt=""></div>
-        <div class="itemqui"><img src="../../images/characters/image_centpx/qui-gon_jinn_resultatredimensionner.webp"
-                alt=""></div>
-        <div class="itemboss"><img src="../../images/characters/image_centpx/" alt=""></div>
-        <div></div>
-    
 
 
-</div>
+        <div class="item2">
+            <h2>Les protagonistes apparu dans la menace fantome</h2>
+
+
+            <div class="itemvalorum"><a href="#"><img
+                        src="../../images/characters/image_centpx/finis_valorum_resultatredimensionner.jpg" alt="">
+                </a></div>
+
+            <div class="gunray"><a href="#"><img
+                        src="../../images/characters/image_centpx/nute_gunray_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="qui"><a href="#"></a><img
+                    src="../../images/characters/image_centpx/qui-gon_jinn_resultatredimensionner.webp" alt="">
+            </div>
+
+            <div class="boss"><a href="#"><img
+                        src="../../images/characters/image_centpx/rugor_nass_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="jar"><a href="#"><img
+                        src="../../images/characters/image_centpx/jarjar-bink_resultatredimensionner.jpg" alt="">
+                </a></div>
+
+            <div class="ki"><a href="#"></a><img
+                    src="../../images/characters/image_centpx/ki_di_mundi_resultatredimensionner.webp" alt="">
+            </div>
+
+            <div class="yoda "><a href="#"><img
+                        src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="dark"><a href="#"><img
+                        src="../../images/characters/image_centpx/dark_maul_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="itemshmi"><a href="#"><img
+                        src="../../images/characters/image_centpx/shmi_skywalker_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="watto"><a href="#"><img
+                        src="../../images/characters/image_centpx/watto_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="sio"><a href="#"><img
+                        src="../../images/characters/image_centpx/sio_bibble_resultatredimensionner.jpg" alt="">
+                </a></div>
+
+            <div class="c3po"><a href="#"><img
+                        src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="">
+                </a></div>
+
+            <div class="r2d2"><a href="#"><img
+                        src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="tanaka"><a href=""><img
+                        src="../../images/characters/image_centpx/captain_tanaka_resultatredimensionner.jpg" alt="">
+                </a></div>
+
+        </div>
+
+
+
+        <div class="item3">
+            <h2>Les protagonistes apparu dans l'attaque des clones </h2>
+
+            <div class="compte"><a href="#"><img
+                        src="../../images/characters/image_centpx/compte_dooku_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="zam"><a href="#"><img
+                        src="../../images/characters/image_centpx/zam_wesell_resultatredimensionner.jpg" alt="">
+                </a></div>
+
+            <div class="poggle "><a href="#"><img
+                        src="../../images/characters/image_centpx/poggle_bataille_resultatredimensionner.jpg" alt="">
+                </a></div>
+
+            <div class="boba"><a href="#"><img
+                        src="../../images/characters/image_centpx/boba_fett_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="jango"><a href="#"><img
+                        src="../../images/characters/image_centpx/jango._fett_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="tawn"><a href="#"><img
+                        src="../../images/characters/image_centpx/tawn_me_resultatredimensionner.jpg" alt="">
+                </a></div>
+
+            <div class="dexter"><a href="#"><img
+                        src="../../images/characters/image_centpx/Dexter_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="typho"><a href="#"><img
+                        src="../../images/characters/image_centpx/gregar_typho_resultatredimensionner.webp" alt="">
+                </a></div>
+
+
+        </div>
+
+        <div class="item4">
+            <h2>Les protagonistes apparu dans la revanches des shits </h2>
+
+
+            <div class="c3po"><a href="#"><img
+                        src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="">
+                </a></div>
+
+            <div class="r2d2"><a href="#"><img
+                        src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="yoda"><a href="#"><img src="../../images/characters/yoda.webp" alt="">
+                </a></div>
+
+            <div class="grievous"><a href="#"><img
+                        src="../../images/characters/image_centpx/Grievoushead_resultatredimensionner.webp" alt="">
+                </a></div>
+
+            <div class="chewbacca"><a href="#"><img
+                        src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" alt="">
+                </a></div>
+
+            <div class="tarfull"><a
+                    href="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg"></a>
+            </div>
+
+            <div class="organa"><a href="#"><img
+                        src="../../images/characters/image_centpx/organa_resultatredimensionner.jpg" alt=""></a></div>
+
+
+
+        </div>
+
+
 
     </div>
 
