--- a/views/corporations/republique_galactique.html
+++ b/views/corporations/republique_galactique.html
@@ -19,7 +19,7 @@
 						<p>
 							La République galactique (Galactic Republic en version originale), ou simplement désignée comme la République est un régime politique fictif apparaissant dans le monde fantastique de
 							Star Wars prédominant la galaxie durant un millénaire environ, s'achevant 19 ans avant la bataille de Yavin (considérée comme le principal point de repère temporel de l'univers), date à
-							laquelle son Chancelier Suprême proclame l'Empire galactique. Après la disparition de ce dernier, un nouveau régime républicain voit le jour, la Nouvelle République.
+							laquelle son Chancelier Suprême proclame <a href="../corporations/empire_galactique.html">l'Empire galactique</a> . Après la disparition de ce dernier, un nouveau régime républicain voit le jour, la Nouvelle République.
 						</p>
 					</div>
 					<div class="presentoir">
@@ -31,10 +31,10 @@
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
-								<td>Lumineux</td>
+								<td>Lumineux</td> 
 							</tr>
 						</table>
-					</div>
+					</div>          
 				</div>
 			</div>
 		</main>
