--- a/views/corporations/sith.html
+++ b/views/corporations/sith.html
@@ -16,7 +16,10 @@
 				<div class="presentation">
 					<div class="histoire">
 						<h1>Les Sith</h1>
-						<p>L'Ordre Sith, dont les membres étaient communément appelés les Sith, était une ancienne communauté d'utilisateurs du côté obscur de la Force guidés par leur haine et leur colère et dont le seul but était d'asseoir leur suprématie sur la galaxie. Fondé par un Jedi renégat plus de 5000 ans avant la bataille de Yavin, l'Ordre Sith s'étendit alors rapidement dans la galaxie et un conflit perpétuel s'installa alors entre les Sith et l'Ordre Jedi dont le but était de maintenir la paix et la justice au sein de l'Ancienne République.
+						<p>
+							L'Ordre Sith, dont les membres étaient communément appelés les Sith, était une ancienne communauté d'utilisateurs du côté obscur de la Force guidés par leur haine et leur colère et dont
+							le seul but était d'asseoir leur suprématie sur la galaxie. Fondé par un Jedi renégat plus de 5000 ans avant la bataille de Yavin, l'Ordre Sith s'étendit alors rapidement dans la galaxie
+							et un conflit perpétuel s'installa alors entre les Sith et l'Ordre Jedi dont le but était de maintenir la paix et la justice au sein de l'Ancienne République.
 						</p>
 					</div>
 					<div class="presentoir">
@@ -24,7 +27,7 @@
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td>La Menace fantôme, l'Attaque des clones et La Revanche des Sith</td>
+								<td><a href="../movies/movie1.html">La Menace fantôme</a>, <a href="../movies/movie2.html">L'Attaque des clones</a>, <a href="../movies/movie3.html">La Revanche des Sith</a></td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
