--- a/views/characters/boba_fett.html
+++ b/views/characters/boba_fett.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/styles.css">
-    <title>Mace Windu</title>
+    <title>Boba Fett</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="presentation">
                 <div class="histoire">
-                    <h1>boba fett</h1>
+                    <h1>Boba Fett</h1>
                     <p>Boba Fett est un personnage de la saga cinématographique Star Wars.</p>
                 </div>
                 <div class="presentoir">
@@ -25,14 +25,14 @@
                     <table>
                         <tr>
                             <th>Apparaît dans : </th>
-                            <td><a>La Menace fantôme</a> , <a>L'Attaque des clones</a> et <a>La Vengeance des Sith</a>
+                            <td><a href="../movies/movie1.html">La Menace fantôme</a> , <a href="../movies/movie2.html">L'Attaque des clones</a> et <a href="../movies/movie3.html">La Vengeance des Sith</a>
                             </td>
                         </tr>
                         <th>Praière apparition :</th>
-                        <td><a>La Menace fantôme</a> </td>
+                        <td><a href="../movies/movie1.html">La Menace fantôme</a></td>
                         <tr>
                             <th>Affiliations :</th>
-                            <td>chasseur de prime </td>
+                            <td>Chasseur de prime</td>
                         </tr>
                         <tr>
                             <th>Race :</th>
@@ -44,15 +44,15 @@
                         </tr>
                         <tr>
                             <th>Planète d'origine :</th>
-                            <td>kamino</td>
+                            <td>Kamino</td>
                         </tr>
                         <tr>
                             <th>Métier :</th>
-                            <td>Enemi Jedi</td>
+                            <td>Ennemi Jedi</td>
                         </tr>
                         <tr>
                             <th>Côté de la force :</th>
-                            <td>ne maitrise pas la force </td>
+                            <td>Ne maitrise pas la force </td>
                         </tr>
                     </table>
                 </div>
@@ -61,19 +61,19 @@
                 <hr>
                 <h2>Rôle dans l'histoire</h2>
                 <img src="" alt="">
-                <p>Boba Fett est le clone de Jango Fett qu'il a conservé auprès de lui comme son fils, parmi les
-                    milliers d'autres clones réalisés à son image sur la planète Kamino
-                    et qui vont intervenir dans l'épisode II de la saga Star Wars, l'Attaque des clones. Devenu adulte,
+                <p>Boba Fett est le clone de <a href="../characters/jango_fett.html">Jango Fett</a> qu'il a conservé auprès de lui comme son fils, parmi les
+                    milliers d'autres clones réalisés à son image sur la planète <a href="../planets/kamino.html">Kamino</a>
+                    et qui vont intervenir dans l'épisode II de la saga Star Wars, <a href="../movies/movie2.html">l'Attaque des clones</a>. Devenu adulte,
                     Boba est un redoutable chasseur de primes qui est connu pour sa grande adresse
                     à traquer sa proie. Il a souvent travaillé pour le gangster Jabba le Hutt qui lui demande de
                     capturer Han Solo, chose faite grâce à son association avec Dark Vador lors de l'épisode V sur la
-                    planète Bespin. Dans l'épisode VI, il disparait sur Tatooine, avalé par un Sarlacc. Boba Fett
+                    planète Bespin. Dans l'épisode VI, il disparait sur <a href="../planets/tatooine.html">Tatooine</a>, avalé par un Sarlacc. Boba Fett
                     réapparait dans la saison 2 de la série télévisée The Mandalorian, puis en 2021 dans sa propre
                     série, Le Livre de Boba Fett.</p>
                 <p>Durant la Guerre des clones, Boba s'allie d'abord avec un groupe de chasseurs de primes composé de
-                    Bossk, Castas et Aurra Sing, que cette dernière a pris sous son aile après la mort de Jango Fett.
+                    Bossk, Castas et Aurra Sing, que cette dernière a pris sous son aile après la mort de <a href="../characters/jango_fett.html">Jango Fett</a>.
                     Sous le nom de "Lucky", il infiltre un groupe de cadets clones en observation sur un croiseur de la
-                    République en compagnie des Jedi Anakin Skywalker et Mace Windu. Boba piège les quartiers de Windu,
+                    République en compagnie des Jedi <a href="../characters/anakin_skywalker.html">Anakin Skywalker</a> et <a href="../characters/mace_windu.html">Mace Windu</a> Boba piège les quartiers de Windu,
                     mais c'est un soldat clone qui meurt dans l'explosion. Le croiseur en alerte, il sabote les
                     réacteurs de ce dernier, forçant l'équipage à se diriger vers les capsules de sauvetage. Il prend
                     soin de saboter celle dans laquelle il se trouve afin de ne pas se rendre au point de rendez-vous,
