--- a/views/characters/index_perso.html
+++ b/views/characters/index_perso.html
@@ -16,19 +16,20 @@
         <div class="item1">
 
             <h2>personnages récurent de la trilogie</h2>
-            <div class="itemanakin"><a href="#"><img
+            
+            <div class="anakin"><a href="#"><img
                         src="../../images/characters/image_centpx/anna_skywalker_resultatredimensionner.webp"
                         alt=""></a></div>
-            <div class="itempalpatine"><a href="#"><img
+            <div class="palpatine"><a href="#"><img
                         src="../../images/characters/image_centpx/empereur_palpatine_resultatredimensionner.webp"
                         alt=""></a>
             </div>
-            <div class="itemamidala"><a href="#"><img
+            <div class="amidala"><a href="#"><img
                         src="../../images/characters/image_centpx/padme_admidala_resultatredimensionner.webp"
                         alt=""></a></div>
-            <div class="itemobiwan"><a href="#"><img
+            <div class="obiwan"><a href="#"><img
                         src="../../images/characters/image_centpx/hobi_wan_resultatredimensionner.jpg" alt=""></a></div>
-            <div class="itemmace"><a href="#"><img
+            <div class="mace"><a href="#"><img
                         src="../../images/characters/image_centpx/mace_windu_resultatredimensionner.jpg" alt=""
                         width="50px"></a></div>
         </div>
@@ -149,7 +150,7 @@
                         src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="">
                 </a></div>
 
-            <div class="yoda"><a href="#"><img src="../../images/characters/yoda.webp" alt="">
+            <div class="yoda"><a href="#"><img src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="">
                 </a></div>
 
             <div class="grievous"><a href="#"><img
