--- a/views/characters/yoda.html
+++ b/views/characters/yoda.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Anakin Skywalker</title>
+	<title>Yoda</title>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 					<table>
 						<tr>
 							<th>Apparaît dans :</th>
-							<td><a>La Menace fantôme</a>,<a> La guerre des clones</a> et <a>l'héritage</a></td>
+							<td><a href="../movies/movie1.html">La Menace fantôme</a></td>
 						</tr>
 						<tr>
 							<th>Première apparition :</th>
@@ -36,11 +36,11 @@
 						</tr>
 						<tr>
 							<th>Affiliations :</th>
-							<td>ordre jedi</td>
+							<td>Ordre <a href="../corporations/jedi.html">Jedi</a></td>
 						</tr>
 						<tr>
 							<th>Race :</th>
-							<td>race de yoda</td>
+							<td>Race de Yoda</td>
 						</tr>
 						<tr>
 							<th>Genre :</th>
@@ -52,7 +52,7 @@
 						</tr>
 						<tr>
 							<th>Métier :</th>
-							<td>maitre jedi</td>
+							<td>Maitre <a href="../corporations/jedi.html">Jedi</a></td>
 						</tr>
 						<tr>
 							<th>Côté de la force :</th>
@@ -66,19 +66,17 @@
 				<img src="" alt="" />
 				<p>
 					On y apprend le rôle important de Yoda au Conseil Jedi. Quand des jeunes padawans commencent les
-					premières étapes de la formation Jedi, ils le font avec les conseils avertis de Yoda.
-					Beaucoup des plus grands Jedi de la République galactique se sont exercés avec Yoda dans leur
-					jeunesse au sein de groupes de formation, les clans
+					premières étapes de la formation <a href="../corporations/jedi.html">Jedi</a>, ils le font avec les conseils avertis de Yoda.
+					Beaucoup des plus grands <a href="../corporations/jedi.html">Jedi</a> de la <a href="../corporations/republique_galactique.html">République galactique</a> se sont exercés avec Yoda dans leur
+					jeunesse au sein de groupes de formation, les clans.
 				</p>
-				.
-
 				<p>
-					L'ombre du côté obscur est tombée sur la République et Yoda le sent de plus en plus. La montée en
+					L'ombre du côté obscur est tombée sur la <a href="../corporations/republique_galactique.html">République galactique</a> et Yoda le sent de plus en plus. La montée en
 					puissance du côté obscur crée une perturbation dans la Force assez forte pour occulter les
-					facultés de précognition du Jedi dans les sujets importants. Sentant l'incertitude préoccupante du
-					futur, Yoda reconnaît le besoin de méditer. Lors du décès de la mère d'Anakin et du
-					massacre des Tuskens, Yoda ressent alors le grand bouleversement dans l'esprit du Jedi et comprend
-					qu'Anakin se rapproche de plus en plus du côté obscur. Le Comte Dooku, un ancien padawan
+					facultés de précognition du <a href="../corporations/jedi.html">Jedi</a> dans les sujets importants. Sentant l'incertitude préoccupante du
+					futur, Yoda reconnaît le besoin de méditer. Lors du décès de la mère d'<a href="../characters/anakin_skywalker.html">Anakin</a> et du
+					massacre des Tuskens, Yoda ressent alors le grand bouleversement dans l'esprit du <a href="../corporations/jedi.html">Jedi</a> et comprend
+					qu'Anakin se rapproche de plus en plus du côté obscur. Le <a href="../characters/compte_dooku.html">Comte Dooku</a>, un ancien padawan
 					de Yoda mais désormais dirigeant de la CSI, construit une force militaire avec pour effectif
 					principal les armées de droïdes des guildes de commerce. Quelque chose doit être fait.
 				</p>
